--- a/packages/amplitude/package.json
+++ b/packages/amplitude/package.json
@@ -14,11 +14,14 @@
   "homepage": "https://rangle.github.io/redux-beacon/docs/targets/amplitude.html",
   "license": "MIT",
   "scripts": {
-    "prepublishOnly": "yarn run build",
+    "prepare": "yarn run build",
     "build": "tsc -p tsconfig.build.json"
   },
+  "devDependencies": {
+    "@amplitude/analytics-browser": "^0.4.1"
+  },
   "peerDependencies": {
-    "amplitude-js": "^4.1.0",
+    "@amplitude/analytics-browser": "^0.4.1",
     "redux-beacon": "2.x"
   }
 }
